# refactoring_tools

./: pyproject.toml
src/: codemods.py  format_specifier.py  io.py  matchers.py  metadata.py  transformers.py
src/codemods/: __init__.py  add_global_statements.py  codemod_base.py  imports.py
src/tests/: test_add_global_statements.py  test_codemods.py  test_replace_func_with_logger.py  test_transformers.py
src/transformers/: replace_function.py
wsf_refactoring_tools/codemods/: __init__.py  add_global_statements.py  add_imports.py  imports.py  remove_logfunc.py  replace_string.py
wsf_refactoring_tools/tests/: __init__.py  test_add_global_statements.py  test_metadata_providers.py  test_remove_log_func.py  test_replace_func_with_logger.py
wsf_refactoring_tools/utils/: exception_stack.py  format_specifier.py  is_referent_instance_of.py  matchers.py  parameterized_class_factory.py
